--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -29,6 +29,7 @@ jobs:
           - 22
           - 23
           - 24
+          - gvm-24
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-qemu-action@v2
